# pong

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html
.github/workflows/: deploy-to-pages.yml  rust-clippy.yml
src/: local.rs  main.rs  menu.rs  online.rs  pong.rs  types.rs  util.rs
web/: index.html
