[package]
name = "pong"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_loopless = "0.7.0"

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	"x11",
	"filesystem_watcher"
	]

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies.bevy]
version = "0.8"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	]

