[package]
name = "pong"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"

[dependencies]
rand = { version = "0.8.5", features = ["alloc"] }
iyes_loopless = "0.7.1"
ggrs = "0.9"
bevy_ggrs = "0.10.0"
matchbox_socket = { git="https://github.com/johanhelsing/matchbox", features = ["ggrs-socket"] }
# matchbox_socket = { version="0.3.0", features = ["ggrs-socket"] }
bytemuck = { version = "1.7", features = ["derive"] }

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	"x11",
	"filesystem_watcher"
	]

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies]
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies.bevy]
version = "0.8"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	]

