[package]
name = "pong"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
online = ["bevy_ggrs", "matchbox_socket", "ggrs", "bytemuck"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
rand = { version = "0.8.5", features = ["alloc"] }
iyes_loopless = "0.9.1"
ggrs = { version = "0.9", optional = true }
bevy_ggrs = { version = "0.11.0", optional = true }
matchbox_socket = { version="0.5", features = ["ggrs-socket"], optional = true }
bytemuck = { version = "1.12", features = ["derive"], optional = true }

# [patch.crates-io]
# ggrs = {git = "https://github.com/gschup/ggrs"}
# matchbox_socket = { git="https://github.com/johanhelsing/matchbox" }
# bevy_ggrs = {git="https://github.com/gschup/bevy_ggrs"}

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	"x11",
	"filesystem_watcher"
	]

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies]
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies.bevy]
version = "0.9"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	]

